--- a/.config/fuzzel/fuzzel.ini
+++ b/.config/fuzzel/fuzzel.ini
@@ -16,7 +16,7 @@ sort-result=yes
 # delayed-filter-ms=300
 # delayed-filter-limit=20000
 # show-actions=no
-terminal=$TERMINAL -e  # Note: you cannot actually use environment variables here
+terminal=kitty -e
 # launch-prefix=<not set>
 # list-executables-in-path=no
 
